# output-gemini_clone_app_v2-

./: .gitignore  1_Overview.py  README.md  app.py  data.py  main.py  pyproject.toml  regime.py  requirements.txt  scanner.py  scheduler.py  script.py  signals.py  ui.py
app/: backtest.py  config.py  data.py  main.py  portfolio.py  regime.py  storage.py
pages/: 1_Overview.py  2_Research.py  3_Scanner.py
scripts/: run_weekly_scan.py
