[build-system]
requires=["setuptools>=68","wheel"]
build-backend="setuptools.build_meta"

[project]
name="gemini-clone-app-v2"
version="1.0.0"
requires-python=">=3.11"
dependencies=["streamlit>=1.36","pandas>=2.2","numpy>=1.26","yfinance>=0.2.40","plotly>=5.22","APScheduler>=3.10","pyarrow>=16.0","requests>=2.32","scikit-learn>=1.5"]
